fix TOK in the site, add FAQ section to landing, add audit note

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -225,6 +225,250 @@
         </hgroup>
       </div>
     </section>
+    <section id="faq-screen">
+        <div class="faq-wrapper">
+            <hgroup>
+                <h4>FREQUENTLY ASKED</h3>
+                <div>
+                    <p>Have more Questions?</p>
+                    <p>Email us at <a target="_blank" href="mailto:support@msq.tech">support@msq.tech</a></p>
+                </div>
+            </hgroup>
+            <ul>
+                <li>
+                    <details>
+                        <summary>
+                            <span>Why would I use another crypto wallet when I already have one?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                We see MSQ not just as a wallet for investment, where you might store funds long-term, 
+                                but as a wallet designed for your daily needs.
+                            </p>
+                            <p>
+                                Just like we use a bank to safeguard our major assets (like stocks and savings) while 
+                                keeping some cash on hand for everyday expenses — coffee, groceries, taxi rides, etc. — MSQ 
+                                is meant to be your go-to for <b>"crypto pocket money"</b>. It's built to simplify spending 
+                                without compromising on security. We believe that by making transactions more straightforward, 
+                                rather than focusing solely on investment, we can help propel cryptocurrency towards global adoption.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>What are ICRC-1 tokens?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                <span class="btn">ICRC-1</span> represents the foundational token standard within the Internet Computer ecosystem, 
+                                akin to <span class="btn">ERC-20</span>. However, it's designed with stricter guidelines, enhancing its safety.
+                            </p>
+                            <p>
+                                While not every token on the Internet Computer adheres to the <span class="btn">ICRC-1</span> standard, the majority do. 
+                                As a user, you don’t need to delve into these technical details. 🙂 It’s primarily a framework 
+                                that developers use to standardize the functionalities of their tokens, ensuring consistency and 
+                                reliability in transactions.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>Is MSQ Snap free to use?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                Many features of MSQ Snap are available at no cost. However, when you make online purchases using 
+                                MSQ as your payment method, we apply a modest service fee of <span class="btn">1%</span>. This fee is specific to the payment 
+                                process. For other transactions, like sending money to someone, there are no additional MSQ fees — you 
+                                only cover the standard network fee.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>How can I deposit funds to my MSQ wallet?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                Depositing funds into your MSQ wallet can be done in various ways. For instance, if you have funds in 
+                                your <a target="_blank" href="https://nns.ic0.app">NNS wallet</a>, you can transfer some to your MSQ wallet by sending them to the unique principal ID 
+                                of your MSQ account. To find this principal ID, click on the <span class="btn">Receive</span> button in 
+                                your MSQ account and then use the <span class="btn">Copy</span> button to copy it.
+                            </p>
+                            <p>
+                                It’s important to note that MSQ operates differently from many wallets: each account has a unique 
+                                <span class="btn">principal ID</span> <b>for each type of token</b>. This means you must use the 
+                                correct <span class="btn">principal ID</span> for each specific token type — your ICP 
+                                account’s <span class="btn">principal ID</span> won't work for receiving CHAT, for example.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>How can I send funds?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                Sending funds with MSQ is straightforward. First, go to the account from which you want to send money and click 
+                                the <span class="btn">Send</span> button. Then, enter the recipient’s account details, click continue, and confirm 
+                                the transaction in MetaMask.
+                            </p>
+                            <p>
+                                Please be cautious and double-check the recipient's information before confirming the transaction. Keep in mind that 
+                                we are unable to recover your funds if a mistake is made during the transfer process.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>How can other people send me funds?</span>
+                        </summary>
+                        <div>
+                            <p>There are two methods to receive funds: the traditional way and the simplified way.</p>
+                            <p>
+                                <b>The traditional way</b>: Click the <span class="btn">Receive</span> button on the account you wish 
+                                to receive funds in, copy the <span class="btn">principal ID</span>, and share it with the sender. 
+                                The sender then manually selects the token type, inputs this <span class="btn">principal ID</span> into 
+                                the appropriate field, specifies the amount, and confirms the transaction. This method, while flexible 
+                                (allowing funds from any wallet), requires careful input, thus increasing the risk of errors.
+                            </p>
+                            <p>
+                                <b>The simplified way</b>: Click the <span class="btn">Receive</span> button on your account and copy 
+                                the <span class="btn">MSQ payment link</span>. Share this link with the sender, who will be guided 
+                                through an automated process that requires them to only enter the amount to send. This method 
+                                significantly reduces the risk of mistakes, being user-friendly and straightforward. 
+                                However, it is exclusive to MSQ wallet users and cannot be used with other wallets.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>Can I use MSQ to manage ETH or BTC?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                Yes, you can manage Ether (<span class="btn">ETH</span>) and Bitcoin (<span class="btn">BTC</span>) through MSQ, but with a unique approach. 
+                                The Internet Computer uses an advanced Chain Key technology for token bridging, renowned for its 
+                                high security. 
+                            </p>
+                            <p>
+                                Leveraging this technology, the Dfinity Foundation has introduced <span class="btn">ckETH</span> and <span class="btn">ckBTC</span> as bridged 
+                                versions of Ether and Bitcoin, respectively. These are known as twin-tokens.
+                            </p>
+                            <p>
+                                To use these in MSQ, first convert your ETH or BTC into ckETH or ckBTC via the <a target="_blank" href="https://nns.ic0.app">NNS Wallet</a> 
+                                following their provided process. After conversion, you can manage these twin-tokens in MSQ 
+                                like any <span class="btn">ICRC-1</span> token.
+                            </p>
+                            <p>
+                                Learn more about twin-tokens and Chain Key technology <a target="_blank" href="https://internetcomputer.org/multichain">here</a>.
+                            </p>
+                            <p>
+                                We are also developing a more straightforward method to deposit ETH directly into MSQ for MetaMask 
+                                users, aiming to streamline the process.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>How can I log in to a website with MSQ?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                Logging in with MSQ varies based on the website's integration with our system. For websites that 
+                                support MSQ, you'll typically find a <span class="btn">Login with MetaMask</span> or <span class="btn">Login with MSQ</span> 
+                                button. Clicking this button will redirect you to the MSQ website, where you'll be guided through the login process.
+                            </p>
+                            <p>
+                                However, if a website isn't integrated with MSQ, you won't be able to use MSQ for logging in. We are actively working 
+                                on expanding our partnerships to increase the number of websites that support MSQ integration, enhancing accessibility for our users.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>How can I buy something using MSQ?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                The ability to buy with MSQ depends on the website's integration. On websites that support MSQ, look for 
+                                a <span class="btn">Pay with MetaMask</span> or <span class="btn">Pay with MSQ</span> button. Clicking this will 
+                                take you to the MSQ website, which will guide you through the payment process.
+                            </p>
+                            <p>
+                                If a website hasn’t integrated with MSQ, unfortunately, you won’t be able to use MSQ there for payments. 
+                                We are diligently working to expand our network and partner with more websites to enable broader 
+                                integration and ease of payment with MSQ.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>Where can I get more information about MSQ?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                For more information about MSQ, our <a target="_blank" href="https://discord.gg/RMxyF5Huhs">Discord community</a> is a great resource. 
+                                It features a Knowledge Base channel dedicated to answering user queries. If you have any questions or need 
+                                assistance, feel free to join us there.
+                            </p>
+                            <p>
+                                Alternatively, you can reach out via email at <a target="_blank" href="mailto:support@msq.tech">support@msq.tech</a>. We're here to help 
+                                and will respond as quickly as possible.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>Does it work on mobile devices?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                Unfortunately not yet.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
+                            <span>When can we expect MSQ to exit the Beta version?</span>
+                        </summary>
+                        <div>
+                            <p>
+                                MSQ remains in Beta, aligning with MetaMask Snaps' current status. We'll 
+                                transition out of Beta once the platform achieves stability. Additionally, our 
+                                goal is to extend MSQ's functionality to mobile users before leaving Beta, which 
+                                will significantly enhance its usability. Once this milestone is reached, we'll 
+                                be in a strong position to stabilize the release. Until then, we advise against 
+                                storing or transferring significant amounts of funds using MSQ.
+                            </p>
+                        </div>
+                    </details>
+                </li>
+            </ul>
+        </div>
+    </section>
     <section id="integration-screen">
         <div>
             <span>
@@ -288,6 +532,7 @@
                     <a href="#hero-screen" onclick="closeNav()"><li>Get MSQ</li></a>
                     <a href="#no-install-screen" onclick="closeNav()"><li>Key Features</li></a>
                     <a href="#best-community-section" onclick="closeNav()"><li>Community</li></a>
+                    <a href="#faq-screen" onclick="closeNav()"><li>FAQ</li></a>
                     <a href="#integration-screen" onclick="closeNav()"><li>For Devs</li></a>
                 </ul>
                 <a href="https://discord.gg/RMxyF5Huhs" target="_blank">
