replace discord with telegram

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -85,8 +85,8 @@
                     <span>Open MSQ App</span>
                     <img src="/img/arrow-right-top.svg" alt="arrow icon" />
                 </a>
-                    <a class="discord" href="https://discord.gg/RMxyF5Huhs">
-                    <img src="/img/discord.svg" alt="discord icon" />
+                    <a class="discord" href="https://t.me/fortmajoricp">
+                    <img src="/img/telegram.svg" alt="telegram icon" />
                 </a>
                     <a class="github" href="https://github.com/fort-major/msq">
                     <img src="/img/github.svg" alt="github icon" />
@@ -164,11 +164,11 @@
                 <hgroup>
                 <h6>
                     Experiencing issues with MSQ, found a bug, or just want to chat?
-                    Join our Discord Community to connect with others like you!
+                    Join our Telegram to connect with others like you!
                 </h6>
-                <a href="https://discord.gg/RMxyF5Huhs" class="discord-btn">
-                    <img src="/img/discord.svg" alt="discord icon" />
-                    <span>Join Discord</span>
+                <a href="https://t.me/fortmajoricp" class="discord-btn">
+                    <img src="/img/telegram.svg" alt="discord icon" />
+                    <span>Join Telegram</span>
                 </a>
                 </hgroup>
             </div>
@@ -403,6 +403,21 @@
                 <li>
                     <details>
                         <summary>
+                            <span>I can't log in! The MetaMask button is unresponsive! What do I do?</span>
+                        </summary>
+                        <div>
+                            <p>MSQ is still in Beta and problems like this can happen. We're constantly working on improvements and we are aware of the problem.</p>
+                            <p>What you can do now to resolve the issue right now:</p>
+                            <p><span class="btn">Update your browser to the latest version.</span> Outdated browser is the most common problem and there is a 90% chance this will help you.</p>
+                            <p><span class="btn">Try reinstalling MetaMask.</span> Sometimes old stale data prevents MetaMask from working properly.</p>
+                            <p><span class="btn">Try a different browser.</span> MSQ is available everywhere where MetaMask is. If you're using Chrome, try Firefox and vice-versa.</p>
+                            <p>But if nothing helps, reach us out via <a href="https://t.me/fortmajoricp/16" target="_blank">Telegram</a>. We'll do our best to help you as soon as we can.</p>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details>
+                        <summary>
                             <span>How can I buy something using MSQ?</span>
                         </summary>
                         <div>
@@ -426,9 +441,8 @@
                         </summary>
                         <div>
                             <p>
-                                For more information about MSQ, our <a target="_blank" href="https://discord.gg/RMxyF5Huhs">Discord community</a> is a great resource. 
-                                It features a Knowledge Base channel dedicated to answering user queries. If you have any questions or need 
-                                assistance, feel free to join us there.
+                                For more information about MSQ, our <a target="_blank" href="https://t.me/fortmajoricp">Telegram community</a> is a great resource. 
+                                If you have any questions or need assistance, feel free to join us there.
                             </p>
                             <p>
                                 Alternatively, you can reach out via email at <a target="_blank" href="mailto:support@msq.tech">support@msq.tech</a>. We're here to help 
@@ -506,8 +520,8 @@
             <span>Go to My Wallet</span>
             <img src="/img/arrow-right-top.svg" alt="arrow icon" />
           </a>
-          <a class="discord" href="https://discord.gg/RMxyF5Huhs">
-            <img src="/img/discord.svg" alt="discord icon" />
+          <a class="discord" href="https://t.me/fortmajoricp">
+            <img src="/img/telegram.svg" alt="telegram icon" />
           </a>
           <a class="github" href="https://github.com/fort-major/msq">
             <img src="/img/github.svg" alt="github icon" />
@@ -535,7 +549,7 @@
                     <a href="#faq-screen" onclick="closeNav()"><li>FAQ</li></a>
                     <a href="#integration-screen" onclick="closeNav()"><li>For Devs</li></a>
                 </ul>
-                <a href="https://discord.gg/RMxyF5Huhs" target="_blank">
+                <a href="https://t.me/fortmajoricp" target="_blank">
                     <span>Contact Us</span>
                     <img src="/img/arrow-right-top.svg" alt="arrow icon" />
                 </a>
