replace github with X

--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -172,8 +172,8 @@
                     <a class="discord" href="https://t.me/fortmajoricp">
                     <img src="/img/telegram.svg" alt="telegram icon" />
                 </a>
-                    <a class="github" href="https://github.com/fort-major/msq">
-                    <img src="/img/github.svg" alt="github icon" />
+                    <a class="github" href="https://x.com/msqwallet">
+                    <img src="/img/x.svg" alt="x icon" />
                 </a>
             </div>
           </hgroup>
@@ -607,8 +607,8 @@
           <a class="discord" href="https://t.me/fortmajoricp">
             <img src="/img/telegram.svg" alt="telegram icon" />
           </a>
-          <a class="github" href="https://github.com/fort-major/msq">
-            <img src="/img/github.svg" alt="github icon" />
+          <a class="github" href="https://x.com/msqwallet">
+            <img src="/img/x.svg" alt="x icon" />
           </a>
         </div>
       </hgroup>
